k3s/src/k3s/traefik/nginx_example/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
    name: nginx
    namespace: default
    labels:
        app: nginx
spec:
    replicas: 3
    progressDeadlineSeconds: 600
    revisionHistoryLimit: 2
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: nginx
    template:
        metadata:
            labels:
                app: nginx
        spec:
            containers:
                - name: nginx
                  image: nginx:latest
