k3s/src/k3s/traefik/nginx_example/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: nginx
    namespace: default
spec:
    selector:
        app: nginx
    ports:
        - name: http
          targetPort: 80
          port: 80
